# AMDGPUExperiments

./: .gitignore  CMakeLists.txt  LICENSE  README.md  gemm_omniperf.py  hello.cpp  llama_decoding.py  llama_training.py  omniperf.sh  omniperf_launch.sh  print_capability.cpp  print_dev_prop.cpp  profile_triton.sh  rebuild.sh  regs.txt  simulate.py  square_matrix_bench.md  test.cpp  test.cu  test.py  test_linked_lib.py  triton-experiment-perf.py  triton-experiment.py
benchmarks/: gemm_ncu.py  ncu_gemm.sh  omniperf.sh  saxpy.py  triton-experiment.py
benchmarks/amd/: ck_triton_summary.md
benchmarks/nvidia/: square_matrix_bench.md
codegen/: ir.py
include/: amd_buffer_addressing.hpp  bench_utils.hpp  hip_mma_templates.hpp  hip_utils.hpp  launch_defs.hpp  repeat.h  test.hpp  utils.hpp
inst_layouts/: f32_32x32x2f32_reg_a  f32_32x32x2f32_reg_c.txt  f32_32x32x8f16_reg_a  f32_32x32x8f16_reg_b  f32_32x32x8f32_reg_b.txt
kernels/: __init__.py  benchmark_gemm.py  benchmark_gemm_amd.py  benchmark_gemm_nvidia.py  benchmark_gemmf16_amd.py  build_kernel.py  composable_kernel_gemm.py  composable_kernel_gemmf16.py  gemm.py  gemm_hidet.py  gemm_mfmaf16_v1.py  gemm_mfmaf16v2.py  gemm_mfmaf16v3.py  gemm_mfmav1.py  gemm_mfmav2.py  gemm_mfmav3.py  gemmv2.py  gemmv3.py  gemmv4.py  gemmv5.py  gemmv6.py  pipeline_test.py  rocwmma_gemm.py  saxpy.py  utils.py
src/: build_kernel.py  ck_kernel_f32_dl_client.cpp  composable_kernel.cpp  copy.cpp  copy.cu  ds_perm.cpp  experiment_templates.cpp  gemm.cpp  hello.cpp  helloworld.cpp  hidet_gemm.cpp  mfma_gemm.cpp  pipeline_test.cpp  rocblas_gemm.cpp  rocwmma_gemm.cpp  saxpy.cpp  saxpy.cu  simt_gemm.cpp  simt_gemm.cu  simt_gemm_hidet.cpp  simt_gemm_hidet.cu  simt_gemmv2.cu  simt_gemmv3.cu  simt_gemmv4.cu  simt_gemmv5.cu  simt_gemmv6.cu  test.cpp  utils.cpp
src/ck/: ck_kernel_f32_dl_client.cpp  composable_kernel_client.cpp  composable_kernel_clientf16.cpp
src/misc/: copy.cpp  ds_perm.cpp  gemm.cpp  half_test.cpp  pipeline_test.cpp  rocblas_gemm.cpp  rocwmma_example.cpp  saxpy.cpp  smem_latency_test.cpp  struct_test.cu  test_buffer_addr.cpp  test_smem_alias.cu  test_void_call.cpp
src/mma_gemm/: block_tiles.cpp  ck_mfma_gemmf16.cpp  kernel_tiles.cpp  layouts.cpp  mfma_gemm.cpp  mfma_gemmf16v1.cpp  mfma_gemmf16v2.cpp  mfma_gemmf16v3.cpp  mfma_gemmv2.cpp  mfma_gemmv3-5.cpp  mfma_gemmv3.cpp  mfma_tools.cpp  mfma_tools_test.cpp  rocwmma_gemm.cpp  warp_tiles.cpp  wmma_gemmv1.cpp
src/simt_gemm/: simt_gemm.cpp  simt_gemm.cu  simt_gemm_hidet.cpp  simt_gemm_hidet.cu  simt_gemmv2.cu  simt_gemmv3.cu  simt_gemmv4.cu  simt_gemmv5.cu
workloads/copy1e6/mi200/: SQ_IFETCH_LEVEL.csv  SQ_INST_LEVEL_LDS.csv  SQ_INST_LEVEL_SMEM.csv  SQ_INST_LEVEL_VMEM.csv  SQ_LEVEL_WAVES.csv  log.txt  pmc_dispatch_info.csv  pmc_kernel_top.csv  pmc_perf.csv  roofline.csv  sysinfo.csv  timestamps.csv
workloads/copy1e9/mi200/: SQ_IFETCH_LEVEL.csv  SQ_INST_LEVEL_LDS.csv  SQ_INST_LEVEL_SMEM.csv  SQ_INST_LEVEL_VMEM.csv  SQ_LEVEL_WAVES.csv  log.txt  pmc_dispatch_info.csv  pmc_kernel_top.csv  pmc_perf.csv  roofline.csv  sysinfo.csv  timestamps.csv
workloads/copy1e9/mi200/perfmon/: pmc_perf_8.txt
workloads/gemm/mi200/: SQ_IFETCH_LEVEL.csv  SQ_INST_LEVEL_LDS.csv  SQ_INST_LEVEL_SMEM.csv  SQ_INST_LEVEL_VMEM.csv  SQ_LEVEL_WAVES.csv  log.txt  pmc_dispatch_info.csv  pmc_kernel_top.csv  pmc_perf.csv  roofline.csv  sysinfo.csv  timestamps.csv
workloads/rocblas_compute_bound_4096/mi200/: SQ_IFETCH_LEVEL.csv  SQ_INST_LEVEL_LDS.csv  SQ_INST_LEVEL_SMEM.csv  SQ_INST_LEVEL_VMEM.csv  SQ_LEVEL_WAVES.csv  log.txt  pmc_perf.csv  roofline.csv  sysinfo.csv  timestamps.csv
workloads/rocblas_compute_bound_512/mi200/: SQ_IFETCH_LEVEL.csv  SQ_INST_LEVEL_LDS.csv  SQ_INST_LEVEL_SMEM.csv  SQ_INST_LEVEL_VMEM.csv  SQ_LEVEL_WAVES.csv  log.txt  pmc_perf.csv  roofline.csv  sysinfo.csv  timestamps.csv
workloads/rocblas_compute_bound_peak/mi200/: SQ_IFETCH_LEVEL.csv  SQ_INST_LEVEL_LDS.csv  SQ_INST_LEVEL_SMEM.csv  SQ_INST_LEVEL_VMEM.csv  SQ_LEVEL_WAVES.csv  log.txt  pmc_perf.csv  roofline.csv  sysinfo.csv  timestamps.csv
workloads/rocblas_compute_bound_peak/mi200/perfmon/: pmc_perf_1.txt
workloads/rocblas_membound_4096/mi200/: SQ_IFETCH_LEVEL.csv  SQ_INST_LEVEL_LDS.csv  SQ_INST_LEVEL_SMEM.csv  SQ_INST_LEVEL_VMEM.csv  SQ_LEVEL_WAVES.csv  log.txt  pmc_perf.csv  roofline.csv  sysinfo.csv  timestamps.csv
workloads/rocblas_membound_peak/mi200/: SQ_IFETCH_LEVEL.csv  SQ_INST_LEVEL_LDS.csv  SQ_INST_LEVEL_SMEM.csv  SQ_INST_LEVEL_VMEM.csv  SQ_LEVEL_WAVES.csv  log.txt  pmc_perf.csv  roofline.csv  sysinfo.csv  timestamps.csv
workloads/rocblas_membound_peak/mi200/perfmon/: pmc_perf_12.txt  pmc_perf_3.txt  pmc_perf_5.txt
workloads/rocgemm/mi200/: SQ_IFETCH_LEVEL.csv  SQ_INST_LEVEL_LDS.csv  SQ_INST_LEVEL_SMEM.csv  SQ_INST_LEVEL_VMEM.csv  SQ_LEVEL_WAVES.csv  log.txt  pmc_dispatch_info.csv  pmc_kernel_top.csv  pmc_perf.csv  roofline.csv  sysinfo.csv  timestamps.csv
workloads/rocgemm_M1_K11008_N4096/mi200/: SQ_IFETCH_LEVEL.csv  SQ_INST_LEVEL_LDS.csv  SQ_INST_LEVEL_SMEM.csv  SQ_INST_LEVEL_VMEM.csv  SQ_LEVEL_WAVES.csv  log.txt  pmc_dispatch_info.csv  pmc_kernel_top.csv  pmc_perf.csv  roofline.csv  sysinfo.csv  timestamps.csv
workloads/rocgemm_M4096_K4096_N4096/mi200/: SQ_IFETCH_LEVEL.csv  SQ_INST_LEVEL_LDS.csv  SQ_INST_LEVEL_SMEM.csv  SQ_INST_LEVEL_VMEM.csv  SQ_LEVEL_WAVES.csv  log.txt  pmc_dispatch_info.csv  pmc_kernel_top.csv  pmc_perf.csv  roofline.csv  sysinfo.csv  timestamps.csv
workloads/rocgemm_M4096_K4096_N4096/mi200/perfmon/: pmc_perf_4.txt  pmc_perf_9.txt
workloads/rocgemm_M512_K512_N512/mi200/: SQ_IFETCH_LEVEL.csv  SQ_INST_LEVEL_LDS.csv  SQ_INST_LEVEL_SMEM.csv  SQ_INST_LEVEL_VMEM.csv  SQ_LEVEL_WAVES.csv  log.txt  pmc_dispatch_info.csv  pmc_kernel_top.csv  pmc_perf.csv  roofline.csv  sysinfo.csv  timestamps.csv
workloads/triton_matmul/mi200/: log.txt
workloads/vcopy/mi200/: SQ_IFETCH_LEVEL.csv  SQ_INST_LEVEL_LDS.csv  SQ_INST_LEVEL_SMEM.csv  SQ_INST_LEVEL_VMEM.csv  SQ_LEVEL_WAVES.csv  log.txt  pmc_dispatch_info.csv  pmc_kernel_top.csv  pmc_perf.csv  sysinfo.csv  timestamps.csv
(+4 files in other folders)
